--- a/ms.video.downloader.android/Resources/Layout/Main.axml
+++ b/ms.video.downloader.android/Resources/Layout/Main.axml
@@ -3,11 +3,46 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <Button
-        android:id="@+id/MyButton"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="DOWNLOAD" />
+        android:layout_height="52.7dp"
+        android:id="@+id/frameNavigation">
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="45.0dp"
+            android:layout_height="fill_parent"
+            android:text="&lt;" />
+        <Button
+            android:id="@+id/forwardButton"
+            android:layout_width="45.0dp"
+            android:layout_height="fill_parent"
+            android:text="&gt;" />
+        <Button
+            android:id="@+id/downloadButton"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:text="DOWNLOAD" />
+    </LinearLayout>
+    <FrameLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="fill_parent"
+        android:layout_height="26.7dp"
+        android:id="@+id/frameDownload">
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/progressBar1" />
+        <TextView
+            android:text="..."
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/textView1"
+            android:textColor="@android:color/black" />
+    </FrameLayout>
     <WebView
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
